# miniclaw

./: .gitignore  CLAUDE.md  README.md  SETUP.md  bot.py  channel.py  claude_cli.py  cli_runner.py  config.json  heartbeat.py  miniclaw.service  pyproject.toml  skills.py
channels/: discord_ch.py  slack_ch.py  telegram_ch.py  whatsapp_ch.py
workspace/: HEARTBEAT.md  MEMORY.md
workspace/skills/: example.SKILL.md
